samples/_failures_safe/1761496744_3aa81d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b6f4432.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_5b6f4432.c:160:39: error: missing terminating " character
  160 |         case TOKEN_IDENTIFIER: return "
      |                                       ^
./samples/SAFE/__tmp_5b6f4432.c:160:9: error: expected expression at end of input
  160 |         case TOKEN_IDENTIFIER: return "
      |         ^~~~
./samples/SAFE/__tmp_5b6f4432.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5b6f4432.c:160:9: error: expected declaration or statement at end of input
